# link-bot

./: Cargo.toml  README.md  config.toml.example
.github/workflows/: release.yml
src/: bot.rs  config.rs  event_handler.rs  main.rs
src/commands/: addons.rs  ban.rs  mod.rs  user_create.rs  user_get.rs  verify.rs
